<resources>
    <string name="app_name">4month_DZ2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text">Начать работу</string>
    <string name="text_btn">Пропустить</string>
    <string name="register">Регистрация по номеру</string>
    <string name="noteicon">noteIcon</string>
    <string name="text2">Введите номер телефона</string>
    <string name="text3">Ваш код</string>
    <string name="text4">text</string>
    <string name="_30">30 мая </string>
    <string name="go">Готово</string>
    <string name="Заголовок">Заголовок</string>
    <string name="plus">+</string>
</resources>