<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.singin.RegisterFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="105dp"
        android:layout_marginBottom="44dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/notes_1"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="106dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="106dp"
        android:layout_marginBottom="430dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/et_number"
        android:layout_width="330dp"
        android:inputType="phone"
        android:layout_height="wrap_content"
        android:background="@drawable/rounder"
        android:drawableStart="@drawable/telephone"
        android:hint="@string/text2"
        android:drawablePadding="10dp"
        android:layout_marginTop="70dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="15dp"/>

    <EditText
        android:id="@+id/et_kod"
        android:textColor="@color/white"
        android:layout_width="330dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounder"
        android:drawableStart="@drawable/shape"
        android:hint="@string/text3"
        android:layout_marginTop="20dp"
        android:drawablePadding="10dp"
        android:textColorHint="@color/gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_number"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btn_number"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:background="@drawable/rounder_button"
        android:textSize="19sp"
        android:text="Получить код"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="30dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/et_kod"/>

    <Button
        android:id="@+id/btn_code"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:background="@drawable/rounder_button"
        android:textSize="19sp"
        android:text="Подтвердить"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_number"/>



    <Button
        android:id="@+id/btn_register2"
        android:layout_width="245dp"
        android:layout_height="55dp"
        android:textSize="17dp"
        android:backgroundTint="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/orange"
        android:text="Отправить снова"
        android:layout_marginTop="10dp"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@id/btn_code"/>

</androidx.constraintlayout.widget.ConstraintLayout>
