<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.fragments.note.detail.DetailNoteAppFragment">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="20dp"
        android:layout_height="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/shape__2_"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="24dp"
        android:backgroundTint="@color/black"
        android:text="@string/go"
        android:textAllCaps="false"
        android:textColor="@color/orange"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextClock
        android:id="@+id/tv_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/ed_data"
        android:text="19:52"
        android:layout_marginStart="15dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/ed_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="20dp"
        android:text="@string/_30"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/ed_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/Заголовок"
        android:textSize="30sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ed_data"
        android:importantForAutofill="no"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/ed_description"
        android:layout_width="380dp"
        android:layout_height="500dp"
        android:layout_marginStart="20dp"
        android:hint="Начните ввод..."
        android:gravity="top"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/ed_title"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mtr_btn_1"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="40dp"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/dark_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mtr_btn_2"
        android:layout_width="100dp"
        android:layout_height="65dp"
        app:cornerRadius="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/dark_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/mtr_btn_1"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/mtr_btn_3"
        android:layout_width="100dp"
        android:layout_height="65dp"
        android:layout_marginStart="30dp"
        app:cornerRadius="20dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/brown"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/mtr_btn_2"/>

    <ImageView
        android:id="@+id/img_dots1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/ellipse_6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mtr_btn_1"
        tools:ignore="ContentDescription" />
    <ImageView
        android:id="@+id/img_dots2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_marginTop="10dp"
        android:layout_marginStart="4dp"
        android:src="@drawable/ellipse_6"
        app:layout_constraintEnd_toStartOf="@id/img_dots3"
        app:layout_constraintStart_toEndOf="@id/img_dots1"
        app:layout_constraintTop_toBottomOf="@+id/mtr_btn_2"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/img_dots3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="55dp"
        android:visibility="invisible"
        android:src="@drawable/ellipse_6"
        app:layout_constraintTop_toBottomOf="@+id/mtr_btn_3"
        tools:ignore="ContentDescription"
        app:layout_constraintEnd_toEndOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>